fixed broken css

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -18,6 +18,7 @@ header * {
   display: flex;
   justify-content: space-between;
   text-align: center;
+  align-items: center;
 }
 
 header * {
@@ -54,9 +55,14 @@ header *:hover {
   padding: 0px;
   display: flex;
   border-right: 1px solid #111;
+  height: 100%;
 }
 
 .greeting-left * {
+  padding: 12px 32px 12px;
+}
+
+.greeting-left-border * {
   padding: 12px 32px 12px;
 }
 
@@ -68,7 +74,8 @@ header *:hover {
 }
 
 .logged-in .header-link {
-  background: url(https://a-v2.sndcdn.com/assets/images/header/cloud-e365a47.png) no-repeat 12px 11px;
+  background: url(https://a-v2.sndcdn.com/assets/images/header/cloud-e365a47.png) no-repeat 12px;
+  height: 100%;
   width: 70px;
 }
 
@@ -136,7 +143,7 @@ header *:hover {
 }
 
 .logged-out .header-link {
-  background: url(https://a-v2.sndcdn.com/assets/images/header/cloud-e365a47.png) no-repeat 12px 11px;
+  background: url(https://a-v2.sndcdn.com/assets/images/header/cloud-e365a47.png) no-repeat 12px;
   padding-left: 75px;
   width: 184px;
   color: #fff;
